# NoiseMachine-Vibrato

./: .gitmodules  CMakeLists.txt  README.md
CommandLine/project/src/Exec/: CMakeLists.txt
CommandLine/project/src/Lfo/: CMakeLists.txt  Lfo.cpp
CommandLine/project/src/Lfo/include/: Lfo.h
CommandLine/project/src/Vibrato/: CMakeLists.txt
CommandLine/project/test/: testLfo.cpp  testVibrato.cpp
CommandLine/project/test/groundData/: SineTest3.txt  SrTest3.txt
src/: CMakeLists.txt
src/Exec/: CMakeLists.txt  main.cpp
src/Lfo/: CMakeLists.txt  Lfo.cpp
src/Lfo/include/: Lfo.h
src/Plugin/: CMakeLists.txt  MyLookAndFeel.cpp  PluginEditor.cpp  PluginProcessor.cpp
src/Plugin/include/: MyLookAndFeel.h  PluginEditor.h  PluginProcessor.h
src/Vibrato/: CMakeLists.txt  Vibrato.cpp
src/Vibrato/include/: Vibrato.h
test/: CMakeLists.txt  CatchUtil.cpp  IncrementTest1.txt  IncrementTest2.txt  IncrementTest3.txt  SineTest1.txt  SineTest2.txt  SineTest4.txt  SineTest5.txt  SineTest7.txt  main.cpp  outTest.txt  testLfo.cpp  testVibrato.cpp
test/groundData/: SineTest6.txt  SrTest1.txt  SrTest2.txt  SrTest4.txt
test/include/: CatchUtil.h
